user profile view and update page completed with backend also

--- a/ainaa/frontend/templates/frontend/index.html
+++ b/ainaa/frontend/templates/frontend/index.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         {% comment %} <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> {% endcomment %}
         
-        <link rel='icon' href="https://i.im.ge/2022/10/03/1KXPIp.logo2.md.png" sizes="20x20 40x40" type ="image/x-icon"/>
+        <link rel='icon' href="https://i.im.ge/2022/10/03/1KOwDF.logofeathonly.md.png" sizes="20x20 40x40" type ="image/x-icon"/>
+        
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <title>Ainaaa</title>
         {%load static%}
