--- a/ainaa/frontend/templates/frontend/index.html
+++ b/ainaa/frontend/templates/frontend/index.html
@@ -6,7 +6,8 @@
         {% comment %} <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> {% endcomment %}
         {% comment %} <a href="https://im.ge/i/1KOwDF"><img src="https://i.im.ge/2022/10/03/1KOwDF.logofeathonly.md.png" alt="logofeathonly" border="0"></a> {% endcomment %}
         
-        <link rel='icon' href="https://i.im.ge/2022/10/03/1KOwDF.logofeathonly.md.png"  type ="image/x-icon"/>
+        <link rel='icon' href="https://i.im.ge/2022/10/03/1KOwDF.logofeathonly.md.png"  width= "50px"
+        height= "20px" type ="image/x-icon"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <title>Ainaaa</title>
         {%load static%}
