background and card modifications done

--- a/ainaa/frontend/templates/frontend/index.html
+++ b/ainaa/frontend/templates/frontend/index.html
@@ -9,7 +9,7 @@
         <link rel='icon' href="https://i.im.ge/2022/10/03/1KOwDF.logofeathonly.md.png"  width= "50px"
         height= "20px" type ="image/x-icon"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <title>Ainaaa</title>
+        <title>Ainaa</title>
         {%load static%}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link
