--- a/ainaa/frontend/templates/frontend/index.html
+++ b/ainaa/frontend/templates/frontend/index.html
@@ -26,8 +26,8 @@
         
         
         {% comment %} for canvas js {% endcomment %}
-        <script type="text/javascript" src="canvasjs.min.js"></script>
-
+        <script type="module" src="canvasjs.min.js"></script>
+            {% comment %} was text/javascript {% endcomment %}
         
 
     </head>
